getting_started/test_files/syntax_errors/class_missing_closing_bracket.java
public class Factorial{
    public static void main(String[] a){
    }
}

class Element {

